# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  cookiecutter.json  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-accept-ci-changes.yml  cache-cleaner.yml  main.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: conf.py  console_script_setup.rst  prompts.rst  pypi_release_checklist.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AGENTS.md  AI_POLICY.md  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  environment-dev.yml  environment-docs.yml  pyproject.toml  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini  tox.toml
{{cookiecutter.project_slug}}/.github/: labeler.yml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
{{cookiecutter.project_slug}}/.github/workflows/: actions-versions-updater.yml  auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
{{cookiecutter.project_slug}}/CI/: requirements_ci.in  requirements_ci.txt
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst  installation.rst  releasing.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
