[build-system]
requires = ["flit_core >=3.11.0,<4.0"]
build-backend = "flit_core.buildapi"

[project]
name = "cookiecutter-pypackage-ouranos"
version = "0.1.0"
description = "Cookiecutter template for a Python package"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "BSD" }
authors = [
  { name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca" },
]
requires-python = ">=3.10"
keywords = ["cookiecutter", "template", "package"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Ouranosinc/cookiecutter-pypackage"

[project.optional-dependencies]
dev = [
  "build >=1.3.0",
  "cookiecutter >=2.6.0",
  "coverage >=7.5.1",
  "flit >=3.11.0,<4.0",
  "pre-commit >=3.5.0",
  "pytest-cookies >=0.7.0",
  "pytest >=8.3.2",
  "tox >=4.30.3",
  "twine >=5.1.1",
  "watchdog >=4.0.0",
]
docs = [
  "alabaster >=1.0.0",
  "sphinx >=7.1.0",
]


[tool]

[tool.ruff]
exclude = [
  "*cookiecutter.project_slug*"
]

[tool.pytest]
addopts = [
    "--verbose"
    ]
markers = [
    "precommit: mark tests that can only be run with precommit present"
]
testpaths = ["tests"]
