[build-system]
requires = ["flit_core >=3.12.0,<4.0"]
build-backend = "flit_core.buildapi"

[dependency-groups]
tox = [
  "tox >=4.41.0",
  "tox-gh >=1.6.1"
]
docs = [
  "alabaster >=1.0.0",
  "sphinx >=8.0.0"
]
dev = [
  "build >=1.4.0",
  "cookiecutter >=2.6.0",
  "coverage >=7.13.0",
  "flit >=3.12.0,<4.0",
  "prek >=0.3.0",
  "pytest-cookies >=0.7.0",
  "pytest >=9.0.2",
  "ruff >=0.15.0",
  "twine >=6.2.0",
  "watchdog >=6.0.0",
  {include-group = "docs"},
  {include-group = "tox"}
]


[project]
name = "cookiecutter-pypackage-ouranos"
description = "Cookiecutter template for a Python package"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
requires-python = ">=3.10"
keywords = ["cookiecutter", "template", "package", "ouranos"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development"
]
dynamic = ["version"]

[project.optional-dependencies]
extras = []

[project.urls]
Homepage = "https://github.com/Ouranosinc/cookiecutter-pypackage"

[tool]

[tool.flit.external-data]
directory = "{{cookiecutter.project_slug}}"

[tool.flit.module]
name = "cookiecutter-pypackage-ouranos"

[tool.flit.sdist]
include = ["CONTRIBUTING.rst", "LICENSE", "Makefile", "README.rst", "cookiecutter.json", "docs/", "hooks/", "tests/"]
exclude = [".*", "*.pyc", "__pycache__"]

[tool.pytest]
minversion = "9.0"
addopts = ["--verbose"]
markers = [
  "precommit: mark tests that can only be run with pre-commit hooks (prek) present"
]
testpaths = [
  "tests"
]

[tool.ruff]
exclude = [
  "*cookiecutter.project_slug*"
]

[tool.tox]
env_list = ["py3.{10,11,12,13,14}", "pypy3.{11}", "docs"]
skip_missing_interpreters = true

[tool.tox.env.docs]
changedir = "docs"
dependency_groups = ["docs"]
commands = [
  ["sphinx-build", "-b", "html", "-d", "{envtmpdir}/doctrees", ".", "{envtmpdir}/html"]
]

[tool.tox.env_run_base]
set_env = {PYTEST_ADDOPTS = "--color=yes", PYTHONPATH = "{toxinidir}", TOX = "1"}
dependency_groups = ["dev"]
download = true
commands_pre = [
  ["pip", "list"],
  ["-", "pip", "check"]
]
commands = [["pytest", "{toxinidir}/tests/test_bake_project.py"]]

[tool.tox.gh.python]
"3.10" = ["py3.10"]
"3.11" = ["py3.11"]
"3.12" = ["py3.12"]
"3.13" = ["py3.13"]
"3.14" = ["py3.14"]
"pypy3.11" = ["pypy3.11"]
