[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[tool:pytest]
addopts = --verbose
markers =
	precommit: mark tests that can only be run with precommit present
testpaths = tests
