{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"}
]
maintainers = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8.0"
keywords = ["{{ cookiecutter.project_name }}"]
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {file = "LICENSE"}
{%- endif %}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
{%- if cookiecutter.open_source_license in license_classifiers %}
  "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["description", "version"]
dependencies = [
  {%- if cookiecutter.command_line_interface|lower == 'click' %}
  "click >=8.1.7"
  {% elif cookiecutter.command_line_interface|lower == 'typer' %}
  "typer >=0.12.3"
  {%- endif %}
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "pip >=24.0",
  "bump-my-version >=0.24.3",
  "watchdog >=4.0.0",
  "flake8 >=7.1.0",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0,<4.0",
  "tox >=4.16.0",
  "coverage >=7.5.0",
  "coveralls >=4.0.0",
  "mypy",
  # "numpydoc >=1.7.0",
  {%- if cookiecutter.use_pytest == 'y' %}
  "pytest >=8.2.2",
  "pytest-cov >=5.0.0",
  {%- endif %}
  {%- if cookiecutter.use_black == 'y' %}
  "black ==24.4.2",
  "blackdoc ==0.3.9",
  "isort ==5.13.2",
  {%- endif %}
  "ruff >=0.5.0",
  "pre-commit >=3.5.0"
]
{%- if cookiecutter.make_docs == 'y' %}
docs = [
  # Documentation and examples
  "sphinx >=7.0.0",
  {%- if cookiecutter.command_line_interface|lower == 'click' %}
  "sphinx-click",
  {%- endif %}
  "sphinx-codeautolink",
  "sphinx-copybutton",
  {%- if cookiecutter.add_translations == 'y' %}
  "sphinx-intl",
  {%- endif %}
  "sphinx-rtd-theme >=1.0",
  "nbsphinx",
  "pandoc",
  "ipython",
  "ipykernel",
  "jupyter_client"
]
all = ["{{ cookiecutter.project_name | replace(" ", "-") }}[dev]", "{{ cookiecutter.project_name | replace(" ", "-") }}[docs]"]
{%- else %}
all = ["{{ cookiecutter.project_name | replace(" ", "-") }}[dev]"]
{%- endif %}
{%- if cookiecutter.command_line_interface != "No command-line interface" %}

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:app"
{%- endif %}

[project.urls]
# "Homepage" = "https://{{ cookiecutter.project_name }}.readthedocs.io/"
# "Changelog" = "https://{{ cookiecutter.project_name }}.readthedocs.io/en/stable/history.html"
# "About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "{{ cookiecutter.__gh_slug }}/issues"
"changelog" = "{{ cookiecutter.__gh_slug }}/blob/main/CHANGELOG.rst"
"homepage" = "{{ cookiecutter.__gh_slug }}"

[tool]
{%- if cookiecutter.use_black == 'y' %}

[tool.black]
target-version = [
  "py38",
  "py39",
  "py310",
  "py311",
  "py312"
]
{%- endif %}

[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}>`_ (latest)
{{ '-' * ('`Unreleased <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '>`_ (latest)')|length }}
"""
replace = """\
`Unreleased <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}>`_ (latest)
{{ '-' * ('`Unreleased <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '>`_ (latest)')|length }}

Contributors:

Changes
^^^^^^^
* No change.

Fixes
^^^^^
* No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/tree/{new_version}>`_
{{ '-' * ('`v' + cookiecutter.version + ' <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '/tree/' + cookiecutter.version + '>`_')|length }}
"""

[[tool.bumpversion.files]]
filename = "src/{{ cookiecutter.project_slug }}/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_{{ cookiecutter.project_slug }}.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
{%- if cookiecutter.generated_with_cruft == 'y' %}

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""
{%- endif %}

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.run]
{%- if cookiecutter.use_pytest == 'n' %}
command_line = "-m unittest discover -s tests/"
{%- endif %}
omit = ["tests/*.py"]
relative_files = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.flit.sdist]
include = [
  {%- if cookiecutter.open_source_license in license_classifiers %}
  ".zenodo.json",
  {%- endif %}
  {%- if cookiecutter.create_author_file == 'y' %}
  "AUTHORS.rst",
  {% endif -%}
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  {%- if cookiecutter.open_source_license in license_classifiers %}
  "LICENSE",
  {%- endif %}
  "Makefile",
  "README.rst",
  {%- if cookiecutter.use_conda == 'y' %}
  "environment-dev.yml",
  {%- endif %}
  {%- if cookiecutter.make_docs == 'y' %}
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  {%- endif %}
  "src/{{ cookiecutter.project_slug }}",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  {%- if cookiecutter.make_docs == 'y' %}
  ".readthedocs.yml",
  {% endif -%}
  ".yamllint.yaml"
  {%- if cookiecutter.make_docs == 'y' -%}
  ,
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/{{ cookiecutter.project_slug }}*.rst"
  {%- if cookiecutter.add_translations == 'y' -%}
  ,
  "docs/locales"
  {%- endif %}
  {%- endif %}
]
{%- if cookiecutter.use_black == 'y' %}

[tool.isort]
profile = "black"
py_version = 38
{%- endif %}

[tool.mypy]
files = "."
python_version = 3.9
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true
{%- if cookiecutter.use_pytest == 'y' %}

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "--verbose",
  "--color=yes"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"
{%- endif %}

[tool.ruff]
src = ["{{ cookiecutter.project_slug }}"]
line-length = 150
target-version = "py38"
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
{%- if cookiecutter.use_black == 'y' %}
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
{%- endif %}
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
{%- if cookiecutter.use_black == 'y' %}

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]
{%- endif %}

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/{{ cookiecutter.project_slug }}/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"
