{%- set license_spdx_codes = {
    'MIT license': 'MIT',
    'BSD license': 'BSD-3-Clause',
    'ISC license': 'ISC',
    'Apache Software License 2.0': 'Apache-2.0',
    'GNU General Public License v3': 'GPL-3.0-or-later'
} -%}
[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
lint = [
  # Linting tools
  "codespell >=2.4.1",
  "deptry >=0.24.0",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "mypy >=1.19.1",
  "numpydoc >=1.10.0",
  "pylint >=4.0.4",
  "ruff >=0.15.0",
  "vulture >=2.14",
  "yamllint >=1.38.0"
]
test = [
  # Base testing support
  "coverage[toml] >=7.13.4"
  {%- if cookiecutter.use_pytest == 'y' %},
  "pytest >=9.0.2",
  "pytest-cov >=7.0.0"
  {%- endif %}
]
{%- if cookiecutter.make_docs == 'y' %}
docs = [
  # Documentation and example support
  "ipykernel",
  "ipython >=8.10.0",
  "jupyter_client",
  "nbsphinx >=0.9.8",
  "sphinx >=8.0.0",
  {%- if cookiecutter.command_line_interface|lower == 'click' %}
  "sphinx-click",
  {%- endif %}
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton >=0.5.2",
  {%- if cookiecutter.add_translations == 'y' %}
  "sphinx-intl",
  {%- endif %}
  "sphinx-rtd-theme >=1.0"
]
{%- endif %}
tox = [
  "tox >=4.41.0",
  "tox-gh >=1.6.1"
]
dev = [
  # Development and testing tools
  "bump-my-version >=1.2.6",
  "pip >=26.0.1",
  "prek >=0.3.0",
  "watchdog >=6.0.0",
  {%- if cookiecutter.make_docs == 'y' %}
  {include-group = "docs"},
  {%- endif %}
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "tox"}
]

[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"}
]
maintainers = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["{{ cookiecutter.project_name }}"]
{%- if cookiecutter.open_source_license in license_spdx_codes %}
license = "{{ license_spdx_codes[cookiecutter.open_source_license] }}"
license-files = ["LICENSE"]
{%- endif %}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  {%- if cookiecutter.command_line_interface|lower == 'click' %}
  "click >=8.3.1"
  {% elif cookiecutter.command_line_interface|lower == 'typer' %}
  "typer >=0.22.0"
  {%- endif %}
]

[project.optional-dependencies]
extras = []

{% if cookiecutter.command_line_interface != "No command-line interface" -%}

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:app"

{%- endif %}

[project.urls]
# "Homepage" = "https://{{ cookiecutter.project_name | replace(" ", "-") }}.readthedocs.io/"
# "Changelog" = "https://{{ cookiecutter.project_name | replace(" ", "-") }}.readthedocs.io/en/stable/changelog.html"
# "About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "{{ cookiecutter.__gh_slug }}/issues"
"Source" = "{{ cookiecutter.__gh_slug }}"

[tool]

[tool.bumpversion]
current_version = "{{ cookiecutter.version }}"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}>`_ (latest)
{{ '-' * ('`Unreleased <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '>`_ (latest)')|length }}
"""
replace = """\
..
    `Unreleased <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}>`_ (latest)
    {{ '-' * ('`Unreleased <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '>`_ (latest)')|length }}

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/tree/{new_version}>`_ ({now:%Y-%m-%d})
{{ '-' * ('`v' + cookiecutter.version + ' <https://github.com/' + cookiecutter.github_username + '/' + cookiecutter.project_slug + '/tree/' + cookiecutter.version + '>`_ ' + '({now:%Y-%m-%d})' )|length }}
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/{{ cookiecutter.project_slug }}/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_{{ cookiecutter.project_slug }}.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
{%- if cookiecutter.generated_with_cruft == 'y' %}

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""
{%- endif %}

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "astroid,socio-economic,thirdparty"

[tool.coverage.paths]
source = ["src/{{ cookiecutter.project_slug }}/", "*/site-packages/{{ cookiecutter.project_slug }}/"]

[tool.coverage.run]
{%- if cookiecutter.use_pytest == 'n' %}
command_line = "-m unittest discover -s tests/"
{%- endif %}
omit = ["tests/*.py"]
relative_files = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.deptry]
extend_exclude = ["extras"]
pep621_dev_dependency_groups = ["extras"]

[tool.flit.sdist]
include = [
  {%- if cookiecutter.open_source_license in license_spdx_codes %}
  ".zenodo.json",
  {%- endif %}
  {%- if cookiecutter.create_author_file == 'y' %}
  "AUTHORS.rst",
  {% endif -%}
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  {%- if cookiecutter.open_source_license in license_spdx_codes %}
  "LICENSE",
  {%- endif %}
  "Makefile",
  "README.rst",
  {%- if cookiecutter.use_conda == 'y' %}
  "environment-dev.yml",
  {%- endif %}
  {%- if cookiecutter.make_docs == 'y' %}
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  {%- endif %}
  "src/{{ cookiecutter.project_slug }}",
  "tests/*.py",
  "tox.toml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  {%- if cookiecutter.make_docs == 'y' %}
  ".readthedocs.yml",
  {% endif -%}
  ".yamllint.yaml",
  ".zizmor.yml"
  {%- if cookiecutter.make_docs == 'y' -%}
  ,
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/{{ cookiecutter.project_slug }}*.rst"
  {%- if cookiecutter.add_translations == 'y' -%},
  "docs/locales"
  {%- endif %}
  {%- endif %}
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]
{%- if cookiecutter.use_pytest == 'y' %}

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = [
  "tests"
]
{%- endif %}

[tool.ruff]
src = ["{{ cookiecutter.project_slug }}"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/{{ cookiecutter.project_slug }}/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/{{cookiecutter.project_slug }}", "tests"]
sort_by_size = true
